--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,18 @@
     <meta charset="utf-8">
     </head>
 <body>
-        <h1> hello  there</h1>
-        <h2>hi there</h2>
-        <p>modified work </p>
+        <h1> Chat App</h1>
+
+        <ol id="message"></ol>
+
+       <form id="message-form">
+           <input name="message" type="text" placeholder="Message" />
+           <button>SEND</button>
+
+       </form>
     
     <script src="/socket.io/socket.io.js"></script>
+    <script src="/js/libs/jquery-3.3.1.min.js"></script>
     <script src="/js/index.js"> </script>
         
     </body>
